--- a/EFCore/Mvc/appsettings.json
+++ b/EFCore/Mvc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local)\\sqlexpress;Database=EF_Estudo;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
