--- a/EFCore/Dados/Dados.csproj
+++ b/EFCore/Dados/Dados.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.sqlserver" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.tools" Version="2.2.1">
       <PrivateAssets>all</PrivateAssets>
