--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
